--- a/software.html
+++ b/software.html
@@ -184,8 +184,8 @@
 				<ul>
 					<li>Plugin Architecture - Allows systems to be swapped in and out with minimal changes required e.g. swapping from Direct3D to OpenGL</li>
 					<li>Entities - Entities are constructed using composition, not inheritance to avoid class heirarchy explosions. Components are also interfaced to minimise dependencies on particular implementations</li>
-					<li>Input - Inputs from the mouse and keyboard are abstracted to allow swapping in and out of possiblen event sources e.g. swapping from FreeGLUT to GLFW</li>
-					<li>Logging - Logs to multiple resources with "fprint" style formatting, severities and tags</li>
+					<li>Input - Inputs from the mouse and keyboard are abstracted to allow swapping in and out of possible event sources e.g. swapping from FreeGLUT to GLFW</li>
+					<li>Logging - Logs to multiple resources with "printf" style formatting, severities and tags</li>
 					<li>Maths - Matrix and Vector implementations and other useful functions</li>
 					<li>Messaging - Messages are mediated to allow swapping in and out of possible message sources and destinations with minimal changes e.g. swapping from FreeGLUT to GLFW</li>
 					<li>Models - Provides functions for the creation of basic mesh shapes e.g. cubes</li>
