Added poetry page.
Former-commit-id: c58ad00ead550cdd9f34133fa21bc071bd09ef1f

--- a/campers.html
+++ b/campers.html
@@ -24,6 +24,7 @@
 				<a href="software.html">Software</a>
 				<a href="film.html">Film</a>
 				<h2>Campers</h2>
+				<a href="poetry.html">Poetry</a>
 				<a href="contact.html">Contact</a>
 			</div>
 		</div>
