--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
 				<a href="software.html">Software</a>
 				<a href="film.html">Film</a>
 				<a href="campers.html">Campers</a>
+				<a href="poetry.html">Poetry</a>
 				<h2>Contact</h2>
 			</div>
 		</div>
