--- a/software.html
+++ b/software.html
@@ -22,6 +22,7 @@
 				<h2>Software</h2>
 				<a href="film.html">Film</a>
 				<a href="campers.html">Campers</a>
+				<a href="poetry.html">Poetry</a>
 				<a href="contact.html">Contact</a>
 			</div>
 		</div>
