--- a/film.html
+++ b/film.html
@@ -23,6 +23,7 @@
 				<a href="software.html">Software</a>
 				<h2>Film</h2>
 				<a href="campers.html">Campers</a>
+				<a href="poetry.html">Poetry</a>
 				<a href="contact.html">Contact</a>
 			</div>
 		</div>
