--- a/campers.html
+++ b/campers.html
@@ -12,6 +12,7 @@
 
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+		<script type="text/javascript" src="js/redirect.js"></script>
 		<script type="text/javascript" src="js/sections.js"></script>
 		<script type="text/javascript" src="js/campers.js"></script>
 	</head>
