--- a/film.html
+++ b/film.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" type="text/css" href="css/layout.css" />
 
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+		<script type="text/javascript" src="js/redirect.js"></script>
 		<script type="text/javascript" src="js/sections.js"></script>
 		<script type="text/javascript" src="js/film.js"></script>
 	</head>
