--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,6 @@
 		<link rel="shortcut icon" href="images/favicon.ico" />
 		<link rel="stylesheet" type="text/css" href="css/fonts.css" />
 		<link rel="stylesheet" type="text/css" href="css/layout.css" />
-
-		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-		<script type="text/javascript" src="js/redirect.js"></script>
 	</head>
 
 	<body>
@@ -29,7 +26,7 @@
 
 		022 675 4763
 		</br>
-		<a href="http://nz.linkedin.com/in/simplegsb">LinkedIn Profile</a>
+		<a href="nz.linkedin.com/in/simplegsb">LinkedIn Profile</a>
 		</br>
 		<a href="mailto:simplegsb@gmail.com">simplegsb@gmail.com</a>
 		</br>
@@ -48,3 +45,4 @@
 	</body>
 
 </html>
+
