--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 
 		022 675 4763
 		</br>
-		<a href="nz.linkedin.com/in/simplegsb">LinkedIn Profile</a>
+		<a href="http://nz.linkedin.com/in/simplegsb">LinkedIn Profile</a>
 		</br>
 		<a href="mailto:simplegsb@gmail.com">simplegsb@gmail.com</a>
 		</br>
