Moved videos to Google Drive.
Former-commit-id: 16ae1d35148fa2322e9a73c0a6692a3a078bed32

--- a/film.html
+++ b/film.html
@@ -45,12 +45,12 @@
 			</p>
 
 			<div class="roundButton sd">
-				<a onclick="switchVideo($(this), 'str8GangstaVideo', 'videos/str8-gangsta-360.mp4');">
+				<a onclick="switchVideo($(this), 'str8GangstaVideo', 'https://googledrive.com/host/0B54v-1wOoeUGfnZOMmNqNXktMll0MGdJbXZYaXVKeVlOZkQ5Skx2M2lSWHd1UXdwMEQ1LW8/Str8 Gangsta (360).mp4');">
 					<img src="images/sd.png" alt="SD" />
 				</a>
 			</div>
 			<div class="roundButton hd">
-				<a onclick="switchVideo($(this), 'str8GangstaVideo', 'videos/str8-gangsta-720.mp4');">
+				<a onclick="switchVideo($(this), 'str8GangstaVideo', 'https://googledrive.com/host/0B54v-1wOoeUGfnZOMmNqNXktMll0MGdJbXZYaXVKeVlOZkQ5Skx2M2lSWHd1UXdwMEQ1LW8/Str8 Gangsta (720).mp4');">
 					<img src="images/hd.png" alt="HD" />
 				</a>
 			</div>
@@ -69,12 +69,12 @@
 			</p>
 
 			<div class="roundButton sd">
-				<a onclick="switchVideo($(this), 'bigDealVideo', 'videos/big-deal-360.mp4');">
+				<a onclick="switchVideo($(this), 'bigDealVideo', 'https://googledrive.com/host/0B54v-1wOoeUGfnNJYVhjdTNJaEVOUTlHRVgxRnN2WkZjS0t4MkMwd1h4ZWR1SzA3Y3BCVlU/Big Deal (360).mp4');">
 					<img src="images/sd.png" alt="SD" />
 				</a>
 			</div>
 			<div class="roundButton hd">
-				<a onclick="switchVideo($(this), 'bigDealVideo', 'videos/big-deal-720.mp4');">
+				<a onclick="switchVideo($(this), 'bigDealVideo', 'https://googledrive.com/host/0B54v-1wOoeUGfnNJYVhjdTNJaEVOUTlHRVgxRnN2WkZjS0t4MkMwd1h4ZWR1SzA3Y3BCVlU/Big Deal (720).mp4');">
 					<img src="images/hd.png" alt="HD" />
 				</a>
 			</div>
