More software style improvements...

--- a/software.html
+++ b/software.html
@@ -246,6 +246,10 @@
 		<div id="professional" class="section">
 			<a onclick="selectSection('subSection', 'rushDigital');"><h4>Rush Digital</h4></a>
 			<div id="rushDigital" class="subSection">
+				<p>
+					I got to work on a lot of projects that were very technically challenging with a wide range of platforms and technologies.
+				</p>
+
 				<div class="roundButton">
 					<a href="http://rushdigital.nz">
 						<img src="images/website.png" alt="Website" />
@@ -253,18 +257,10 @@
 				</div>
 
 				<p>
-					I got to work on a lot of projects that were very technically challenging with a wide range of platforms and technologies.
-				</p>
-
-				<p>
 					Here are some of those projects:
 				</p>
 
-				<div class="roundButton">
-					<a onclick="selectSection('superSubSection', 'meatPackHunt');">
-						<h5>Monteith's MeatPack Hunt</h5>
-					</a>
-				</div>
+				<a onclick="selectSection('superSubSection', 'meatPackHunt');"><h5>Monteith's MeatPack Hunt</h5></a>
 				<div id="meatPackHunt" class="superSubSection">
 					<div class="aside">
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/wKGvWgLrt30" frameborder="0" allowfullscreen></iframe>
@@ -286,11 +282,7 @@
 					</div>
 				</div>
 
-				<div class="roundButton">
-					<a onclick="selectSection('superSubSection', 'jellyCar3');">
-						<h5>Jelly Car 3</h5>
-					</a>
-				</div>
+				<a onclick="selectSection('superSubSection', 'jellyCar3');"><h5>Jelly Car 3</h5></a>
 				<div id="jellyCar3" class="superSubSection">
 					<div class="aside">
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/f8iTy12E5bs" frameborder="0" allowfullscreen></iframe>
@@ -312,11 +304,7 @@
 					</div>
 				</div>
 
-				<div class="roundButton">
-					<a onclick="selectSection('superSubSection', 'hiddenWorlds');">
-						<h5>Disney Hidden Worlds</h5>
-					</a>
-				</div>
+				<a onclick="selectSection('superSubSection', 'hiddenWorlds');"><h5>Disney Hidden Worlds</h5></a>
 				<div id="hiddenWorlds" class="superSubSection">
 					<div class="aside">
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/qYp_GpQSOsI" frameborder="0" allowfullscreen></iframe>
@@ -338,11 +326,7 @@
 					</div>
 				</div>
 
-				<div class="roundButton">
-					<a onclick="selectSection('superSubSection', 'wordsOfWonder');">
-						<h5>Words of Wonder</h5>
-					</a>
-				</div>
+				<a onclick="selectSection('superSubSection', 'wordsOfWonder');"><h5>Words of Wonder</h5></a>
 				<div id="wordsOfWonder" class="superSubSection">
 					<div class="aside">
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/fBkerY825H4" frameborder="0" allowfullscreen></iframe>
@@ -364,11 +348,7 @@
 					</div>
 				</div>
 
-				<div class="roundButton">
-					<a onclick="selectSection('superSubSection', 'artRage');">
-						<h5>ArtRage</h5>
-					</a>
-				</div>
+				<a onclick="selectSection('superSubSection', 'artRage');"><h5>ArtRage</h5></a>
 				<div id="artRage" class="superSubSection">
 					<div class="aside">
 						<img src="images/artrage.jpg" />
@@ -388,12 +368,6 @@
 
 			<a onclick="selectSection('subSection', 'bravuraSolutions');"><h4>Bravura Solutions</h4></a>
 			<div id="bravuraSolutions" class="subSection">
-				<div class="roundButton">
-					<a href="http://www.bravurasolutions.com">
-						<img src="images/website.png" alt="Website" />
-					</a>
-				</div>
-
 				<p>
 					I worked primarily on two of their web based enterprise solutions, <a href="http://bravurasolutions.com/solutions/products/wealth-and-life-administration-systems/sonata">Sonata</a> (Web) and eTalis in Agile environments. Both used technology stacks that I had almost no experience with but by the end of my time there I was the authority on most of them in the office where I worked due to my quick ability to learn.
 				</p>
@@ -405,16 +379,16 @@
 				<p>
 					Before I left I was asked to perform training of employees wishing to move to development of web-based products which used a lot of different technologies and patterns from the desktop applications they had worked on previously.
 				</p>
+
+				<div class="roundButton">
+					<a href="http://www.bravurasolutions.com">
+						<img src="images/website.png" alt="Website" />
+					</a>
+				</div>
 			</div>
 
 			<a onclick="selectSection('subSection', 'matrikon');"><h4>Matrikon</h4></a>
 			<div id="matrikon" class="subSection">
-				<div class="roundButton">
-					<a href="http://www.matrikon.com">
-						<img src="images/website.png" alt="Website" />
-					</a>
-				</div>
-
 				<p>
 					I developed customizations and extensions to the <a href="http://www.maximoassetmanagement.com">Maximo</a> system, an enterprise quality J2EE framework owned by IBM. I also developed integrations to Oracle Apps, SAP and others. The majority of this work was Java coding and database scripting with XML and JSP for the UI elements.
 				</p>
@@ -426,16 +400,16 @@
 				<p>
 					At times I was responsible for teaching and delegating work to up to three other developers. When I left I was the senior Maximo developer in the Canadian HQ office.
 				</p>
+
+				<div class="roundButton">
+					<a href="http://www.matrikon.com">
+						<img src="images/website.png" alt="Website" />
+					</a>
+				</div>
 			</div>
 
 			<a onclick="selectSection('subSection', 'quadratek');"><h4>Quadratek</h4></a>
 			<div id="quadratek" class="subSection">
-				<div class="roundButton">
-					<a href="http://www.quadratekgroup.com">
-						<img src="images/website.png" alt="Website" />
-					</a>
-				</div>
-
 				<p>
 					I was given a three month contract to consult and develop on a military satellite communications project for the UAE with their client <a href="http://www.astrium.eads.net/">EADS Astrium</a>. In this instance the Service Management flavour of Maximo was being used for the ordering of certain communications required for military deployments.
 				</p>
@@ -447,20 +421,26 @@
 				<p>
 					During this time I delegated work to up to two other developers. Although I was offered an extension to my contract by various parties I was not satisfied with the location of the work and so sought work elsewhere.
 				</p>
+
+				<div class="roundButton">
+					<a href="http://www.quadratekgroup.com">
+						<img src="images/website.png" alt="Website" />
+					</a>
+				</div>
 			</div>
 		</div>
 
 		<a onclick="selectSection('section', 'mediaDesignSchool'); $('#bragMore').fadeIn();"><h3>Media Design School</h3></a>
 		<div id="mediaDesignSchool" class="section">
+			<p>
+				Here are a bunch of demos from my studies at Media Design School.
+			</p>
+
 			<div class="roundButton">
 				<a href="http://www.mediadesignschool.com">
 					<img src="images/website.png" alt="Website" />
 				</a>
 			</div>
-
-			<p>
-				Here are a bunch of demos from my studies at Media Design School.
-			</p>
 
 			<a onclick="selectSection('subSection', 'gazEngine');"><h4>GazEngine</h4></a>
 			<div id="gazEngine" class="subSection">
