Got around the waypoint limitation of the Google Maps direction service.

--- a/campers.html
+++ b/campers.html
@@ -30,9 +30,9 @@
 		<script type="text/javascript" src="js/simplicityjs/ScriptingEngine.js"></script>
 		<script type="text/javascript" src="js/simplicityjs/Simplicity.js"></script>
 
-		<script type="text/javascript" src="js/simplicityjs-campers/Animator.js"></script>
-		<script type="text/javascript" src="js/simplicityjs-campers/Main.js"></script>
-		<script type="text/javascript" src="js/simplicityjs-campers/Spinner.js"></script>
+		<script type="text/javascript" src="js/camper-viewer/Animator.js"></script>
+		<script type="text/javascript" src="js/camper-viewer/Main.js"></script>
+		<script type="text/javascript" src="js/camper-viewer/Spinner.js"></script>
 
 		<script id="mirrorVertexShader" type="x-shader/x-vertex">
 			uniform mat4 cameraTransform;
